Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -28,11 +28,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "7cec76d5-42b3-4668-8ba7-94d7e8cd892e"
+          "output_collection_id": "dc162a1c-ef69-4392-91f7-4f7e1290347f"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:42:44.060274+00:00",
-          "start_time": "2023-12-14T00:42:40.720289+00:00"
+          "end_time": "2023-12-14T00:46:49.440445+00:00",
+          "start_time": "2023-12-14T00:46:45.848024+00:00"
         }
       },
       "execution_count": null,
@@ -45,11 +45,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "49784414-da9c-48f7-b2fc-5651aa938701"
+          "output_collection_id": "7c53ebf5-04a2-4ebb-9394-95e01f42fc03"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:42:44.375596+00:00",
-          "start_time": "2023-12-14T00:42:44.066071+00:00"
+          "end_time": "2023-12-14T00:46:49.660218+00:00",
+          "start_time": "2023-12-14T00:46:49.448952+00:00"
         }
       },
       "execution_count": null,
@@ -62,11 +62,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "7e71b083-f394-47b8-ace3-45365b214444"
+          "output_collection_id": "c09cc2f4-b02c-4c60-927b-0d2942daeb87"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:42:44.676540+00:00",
-          "start_time": "2023-12-14T00:42:44.381179+00:00"
+          "end_time": "2023-12-14T00:46:49.912189+00:00",
+          "start_time": "2023-12-14T00:46:49.671990+00:00"
         }
       },
       "execution_count": null,
@@ -79,11 +79,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "1928e7d3-f725-4e73-b7f8-81f5f55d8221"
+          "output_collection_id": "bf5d6d98-6cc3-40aa-8ee2-21e134b2c786"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:42:47.905475+00:00",
-          "start_time": "2023-12-14T00:42:44.682083+00:00"
+          "end_time": "2023-12-14T00:46:52.136051+00:00",
+          "start_time": "2023-12-14T00:46:49.917115+00:00"
         }
       },
       "execution_count": null,
@@ -96,12 +96,9 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "fc530168-1eb3-4251-8545-bdc4b3b08981"
+          "output_collection_id": "22488338-5f5c-4e29-bf44-64d783e59892"
         },
-        "ExecuteTime": {
-          "end_time": "2023-12-14T00:43:51.053902+00:00",
-          "start_time": "2023-12-14T00:42:47.911897+00:00"
-        }
+        "ExecuteTime": null
       },
       "execution_count": null,
       "source": "# Fetch statistics for each video\ndef get_video_details(youtube, video_ids):\n    video_details = []\n    for video_id in video_ids:\n        request = youtube.videos().list(\n            part='snippet,statistics',\n            id=video_id\n        )\n        response = request.execute()\n        video_details.extend(response['items'])\n    return video_details\n\nvideo_details = get_video_details(youtube, video_ids)\nlen(video_details)",
@@ -113,7 +110,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "5d46f101-703f-460e-a3ec-0a8e3ad920cf"
+          "output_collection_id": "6f6b9940-9e8d-4217-aafe-2912a8e5550d"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:43:51.636546+00:00",
@@ -308,7 +305,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "ea70a691-15f0-42ea-aa21-25d989a596e8"
+          "output_collection_id": "842ab216-f9c2-48ae-a41b-6f98e82645bb"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:43:53.053374+00:00",
@@ -325,7 +322,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "73869073-5a88-42ca-89d6-7999bcb7fbec"
+          "output_collection_id": "53e998cb-aeda-4a5e-8932-f4b06d81cbcd"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:43:54.774253+00:00",
@@ -342,7 +339,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "9a793037-224b-4668-8e99-d46c5fc9bbad"
+          "output_collection_id": "22d1e4a4-a75a-4ebc-83b3-25458eb7fb56"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:43:55.363423+00:00",
@@ -359,7 +356,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "c22e01b0-25cf-45ab-8457-a1f1f165e8b9"
+          "output_collection_id": "93765297-420e-4735-b2d6-da422f810618"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:43:55.702121+00:00",
@@ -376,7 +373,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "978b2d5a-18fb-45e0-b19a-62c9581649b3"
+          "output_collection_id": "3f5d8a70-fb6c-4718-a57a-567a186d8565"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:43:56.155196+00:00",
@@ -393,7 +390,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "49707963-72ef-46fb-9065-90f43c330bdc"
+          "output_collection_id": "f97dc5d3-5880-4324-a9e0-6031b330e184"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:43:56.902452+00:00",
@@ -410,7 +407,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "f036e3e8-dc81-4991-b623-ba0a28cf2e12"
+          "output_collection_id": "44310978-f9eb-44b5-94d6-f4c21985702d"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:43:57.487770+00:00",
@@ -427,7 +424,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "b829be0a-3b6f-4ba9-b0b0-7ccc46a126b5"
+          "output_collection_id": "29103a4b-4c92-4df5-8eab-dc52d835a462"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:43:58.243248+00:00",
@@ -444,7 +441,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "bddca80f-70a1-492c-a087-5da5afa16023"
+          "output_collection_id": "c873758f-6d4f-4e38-850d-3e80d075c2c7"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:43:59.515464+00:00",
@@ -461,7 +458,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "7afd9a09-a83f-40a6-b002-19485d0c18c3"
+          "output_collection_id": "22b16c0e-77a9-4390-b366-3fd0c2ab84f1"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:44:00.753029+00:00",
@@ -478,7 +475,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "3cae6b10-242a-4db5-be02-f4454447e792"
+          "output_collection_id": "18baa0d8-a86c-4d5c-8070-a10d024e1c39"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:44:01.573048+00:00",
@@ -495,7 +492,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "ee649d30-6268-4680-abff-48b3fdf46084"
+          "output_collection_id": "df2ad019-7df3-4ef1-b345-15d8456ccfcb"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:44:04.454609+00:00",
@@ -515,7 +512,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "5a5cea84-1ee4-457a-99ac-a5e4c0c17f1c"
+          "output_collection_id": "7265c398-c0cc-4470-a9ff-49066832a6e5"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:44:05.930948+00:00",
@@ -532,7 +529,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "62dd05c9-9701-4bb7-941c-35944a754f79"
+          "output_collection_id": "4d6c82e3-a371-4140-bb62-ec68bf76e40b"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:44:07.365507+00:00",
@@ -549,7 +546,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "04fd2873-77f5-4e54-8c14-1f60f6b6bc71"
+          "output_collection_id": "c61cfe93-00d8-4d4f-a8ad-0627a944f82c"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:44:08.417926+00:00",
@@ -566,7 +563,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "73513fd4-59b3-4adc-bb0e-c9d6275a6d6e"
+          "output_collection_id": "3c0641af-b125-43fc-80fc-69ccaa3f52ed"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:45:09.087047+00:00",
@@ -629,7 +626,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "e5be94fe-d510-4342-8b9b-d9cec56ca752"
+          "output_collection_id": "bb3da7eb-6725-44a8-abdf-79937403b806"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T22:45:10.198163+00:00",
@@ -646,7 +643,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "89c15772-487d-4330-a66d-7b3356a0eb71"
+          "output_collection_id": "0f16ddf2-fe77-4938-8b5d-40a670cd6917"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T22:45:16.911624+00:00",
