Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -96,9 +96,12 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "22488338-5f5c-4e29-bf44-64d783e59892"
+          "output_collection_id": "51dd0438-335c-4d96-abb5-13201eace57d"
         },
-        "ExecuteTime": null
+        "ExecuteTime": {
+          "end_time": "2023-12-14T00:47:27.062333+00:00",
+          "start_time": "2023-12-14T00:46:52.143983+00:00"
+        }
       },
       "execution_count": null,
       "source": "# Fetch statistics for each video\ndef get_video_details(youtube, video_ids):\n    video_details = []\n    for video_id in video_ids:\n        request = youtube.videos().list(\n            part='snippet,statistics',\n            id=video_id\n        )\n        response = request.execute()\n        video_details.extend(response['items'])\n    return video_details\n\nvideo_details = get_video_details(youtube, video_ids)\nlen(video_details)",
@@ -110,11 +113,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "6f6b9940-9e8d-4217-aafe-2912a8e5550d"
+          "output_collection_id": "888bd033-b7bf-4869-82ad-daf44da89afd"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:43:51.636546+00:00",
-          "start_time": "2023-12-14T00:43:51.407108+00:00"
+          "end_time": "2023-12-14T00:47:27.289825+00:00",
+          "start_time": "2023-12-14T00:47:27.069574+00:00"
         },
         "datalink": {
           "7873b8dd-a6e2-4543-853a-592620c39ecd": {
@@ -292,6 +295,50 @@
             "sampling_time": "2023-12-14T00:43:51.460246",
             "user_variable_name": "df_videos",
             "variable_name": "df_videos"
+          },
+          "dd1bbdcc-1b4f-4546-aab4-5108d63ecf2a": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 6,
+              "orig_num_rows": 1303,
+              "orig_size_bytes": 72968,
+              "truncated_num_cols": 6,
+              "truncated_num_rows": 1303,
+              "truncated_size_bytes": 72968,
+              "truncated_string_columns": []
+            },
+            "display_id": "dd1bbdcc-1b4f-4546-aab4-5108d63ecf2a",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-12-14T00:47:27.118507",
+            "user_variable_name": "df_videos",
+            "variable_name": "df_videos"
           }
         }
       },
@@ -305,11 +352,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "842ab216-f9c2-48ae-a41b-6f98e82645bb"
+          "output_collection_id": "e56e5948-56a9-4b0d-9e28-8738c92e7312"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:43:53.053374+00:00",
-          "start_time": "2023-12-14T00:43:52.019733+00:00"
+          "end_time": "2023-12-14T00:47:28.645624+00:00",
+          "start_time": "2023-12-14T00:47:27.583974+00:00"
         }
       },
       "execution_count": null,
@@ -322,11 +369,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "53e998cb-aeda-4a5e-8932-f4b06d81cbcd"
+          "output_collection_id": "ee2c3125-86ff-45aa-9927-485e5a40aa92"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:43:54.774253+00:00",
-          "start_time": "2023-12-14T00:43:53.231159+00:00"
+          "end_time": "2023-12-14T00:47:30.426170+00:00",
+          "start_time": "2023-12-14T00:47:28.891879+00:00"
         }
       },
       "execution_count": null,
@@ -339,11 +386,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "22d1e4a4-a75a-4ebc-83b3-25458eb7fb56"
+          "output_collection_id": "a1ef4a88-3883-482f-919b-6e8ab9d7652c"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:43:55.363423+00:00",
-          "start_time": "2023-12-14T00:43:54.939365+00:00"
+          "end_time": "2023-12-14T00:47:31.007301+00:00",
+          "start_time": "2023-12-14T00:47:30.581559+00:00"
         }
       },
       "execution_count": null,
@@ -356,11 +403,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "93765297-420e-4735-b2d6-da422f810618"
+          "output_collection_id": "170d18c0-aca1-4532-8818-246ffcc69131"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:43:55.702121+00:00",
-          "start_time": "2023-12-14T00:43:55.537278+00:00"
+          "end_time": "2023-12-14T00:47:31.418958+00:00",
+          "start_time": "2023-12-14T00:47:31.254295+00:00"
         }
       },
       "execution_count": null,
@@ -373,11 +420,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "3f5d8a70-fb6c-4718-a57a-567a186d8565"
+          "output_collection_id": "51df0427-4829-4017-927c-6ac1b41f09a5"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:43:56.155196+00:00",
-          "start_time": "2023-12-14T00:43:55.707421+00:00"
+          "end_time": "2023-12-14T00:47:31.888107+00:00",
+          "start_time": "2023-12-14T00:47:31.424051+00:00"
         }
       },
       "execution_count": null,
@@ -390,11 +437,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "f97dc5d3-5880-4324-a9e0-6031b330e184"
+          "output_collection_id": "fcb90a3e-2ab7-490e-9f0a-4d86028ebcd5"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:43:56.902452+00:00",
-          "start_time": "2023-12-14T00:43:56.413774+00:00"
+          "end_time": "2023-12-14T00:47:32.738030+00:00",
+          "start_time": "2023-12-14T00:47:32.285239+00:00"
         }
       },
       "execution_count": null,
@@ -407,11 +454,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "44310978-f9eb-44b5-94d6-f4c21985702d"
+          "output_collection_id": "02a4bf34-00ae-40ce-ac3f-d2804abd5338"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:43:57.487770+00:00",
-          "start_time": "2023-12-14T00:43:57.043381+00:00"
+          "end_time": "2023-12-14T00:47:33.299609+00:00",
+          "start_time": "2023-12-14T00:47:32.879000+00:00"
         }
       },
       "execution_count": null,
@@ -424,11 +471,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "29103a4b-4c92-4df5-8eab-dc52d835a462"
+          "output_collection_id": "1d5555df-b3ac-4891-a7b4-931b8b31d764"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:43:58.243248+00:00",
-          "start_time": "2023-12-14T00:43:57.796827+00:00"
+          "end_time": "2023-12-14T00:47:33.969175+00:00",
+          "start_time": "2023-12-14T00:47:33.508350+00:00"
         }
       },
       "execution_count": null,
@@ -441,11 +488,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "c873758f-6d4f-4e38-850d-3e80d075c2c7"
+          "output_collection_id": "21e00018-7f4d-432c-8915-6419004f802a"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:43:59.515464+00:00",
-          "start_time": "2023-12-14T00:43:58.376459+00:00"
+          "end_time": "2023-12-14T00:47:35.318364+00:00",
+          "start_time": "2023-12-14T00:47:34.137877+00:00"
         }
       },
       "execution_count": null,
@@ -458,11 +505,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "22b16c0e-77a9-4390-b366-3fd0c2ab84f1"
+          "output_collection_id": "002cd9c0-a715-4ba9-8993-3cc2ef7a4154"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:44:00.753029+00:00",
-          "start_time": "2023-12-14T00:43:59.700352+00:00"
+          "end_time": "2023-12-14T00:47:36.497450+00:00",
+          "start_time": "2023-12-14T00:47:35.430559+00:00"
         }
       },
       "execution_count": null,
@@ -475,11 +522,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "18baa0d8-a86c-4d5c-8070-a10d024e1c39"
+          "output_collection_id": "b86d0481-f511-4de2-bb47-20ac31be2301"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:44:01.573048+00:00",
-          "start_time": "2023-12-14T00:44:00.984390+00:00"
+          "end_time": "2023-12-14T00:47:37.564724+00:00",
+          "start_time": "2023-12-14T00:47:36.980626+00:00"
         }
       },
       "execution_count": null,
@@ -492,11 +539,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "df2ad019-7df3-4ef1-b345-15d8456ccfcb"
+          "output_collection_id": "e358073e-3be5-4aca-83dd-6660ec1f60df"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:44:04.454609+00:00",
-          "start_time": "2023-12-14T00:44:01.720185+00:00"
+          "end_time": "2023-12-14T00:47:40.428659+00:00",
+          "start_time": "2023-12-14T00:47:37.711935+00:00"
         },
         "jupyter": {
           "outputs_hidden": true
@@ -512,11 +559,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "7265c398-c0cc-4470-a9ff-49066832a6e5"
+          "output_collection_id": "e22391cd-b5b6-4c06-8ebc-6da2943f18aa"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:44:05.930948+00:00",
-          "start_time": "2023-12-14T00:44:04.460797+00:00"
+          "end_time": "2023-12-14T00:47:41.705867+00:00",
+          "start_time": "2023-12-14T00:47:40.435724+00:00"
         }
       },
       "execution_count": null,
@@ -529,15 +576,15 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "4d6c82e3-a371-4140-bb62-ec68bf76e40b"
+          "output_collection_id": "a5f2582d-acb2-4b65-ab4b-16c352e511a7"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:44:07.365507+00:00",
-          "start_time": "2023-12-14T00:44:06.188987+00:00"
+          "end_time": "2023-12-14T00:48:50.287571+00:00",
+          "start_time": "2023-12-14T00:48:49.228202+00:00"
         }
       },
       "execution_count": null,
-      "source": "# Calculating Engagement Ratios\ndf_videos['like_ratio'] = df_videos['likes'] / df_videos['views']\ndf_videos['comment_ratio'] = df_videos['comments'] / df_videos['views']\ndf_videos['dislike_ratio'] = df_videos['dislikes'] / df_videos['views']\n\n# Plotting Engagement Ratios\nplt.figure(figsize=(15, 5))\nplt.subplot(1, 3, 1)\nsns.histplot(df_videos['like_ratio'], kde=True, color='blue')\nplt.title('Like Ratio Distribution')\nplt.xlabel('Like Ratio')\nplt.ylabel('Frequency')\n\nplt.subplot(1, 3, 2)\nsns.histplot(df_videos['comment_ratio'], kde=True, color='green')\nplt.title('Comment Ratio Distribution')\nplt.xlabel('Comment Ratio')\n\nplt.subplot(1, 3, 3)\nsns.histplot(df_videos['dislike_ratio'], kde=True, color='red')\nplt.title('Dislike Ratio Distribution')\nplt.xlabel('Dislike Ratio')\n\nplt.tight_layout()\nplt.show()",
+      "source": "# Calculating Engagement Ratios\ndf_videos['like_ratio'] = df_videos['likes'] / df_videos['views']\ndf_videos['comment_ratio'] = df_videos['comments'] / df_videos['views']\ndf_videos['dislike_ratio'] = df_videos['dislikes'] / df_videos['views']\n\n# Plotting Engagement Ratios\nplt.figure(figsize=(15, 5))\nplt.subplot(1, 3, 1)\nsns.histplot(df_videos['like_ratio'], kde=True, color='blue')\nplt.title('Like Ratio Distribution')\nplt.xlabel('Like Ratio')\nplt.ylabel('Frequency')\n\nplt.subplot(1, 3, 2)\nsns.histplot(df_videos['comment_ratio'], kde=True, color='green')\nplt.title('Comment Ratio Distribution')\nplt.xlabel('Comment Ratio')\n\nplt.tight_layout()\nplt.show()",
       "outputs": []
     },
     {
@@ -546,11 +593,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "c61cfe93-00d8-4d4f-a8ad-0627a944f82c"
+          "output_collection_id": "ac67274b-e850-421c-8904-86b9c9ead0d5"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:44:08.417926+00:00",
-          "start_time": "2023-12-14T00:44:07.475284+00:00"
+          "end_time": "2023-12-14T00:47:44.898982+00:00",
+          "start_time": "2023-12-14T00:47:43.971894+00:00"
         }
       },
       "execution_count": null,
@@ -563,11 +610,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "3c0641af-b125-43fc-80fc-69ccaa3f52ed"
+          "output_collection_id": "f63bbc9f-3ec7-4ade-839b-1a2f5b6de4a8"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-14T00:45:09.087047+00:00",
-          "start_time": "2023-12-14T00:44:08.645211+00:00"
+          "end_time": "2023-12-14T00:48:23.841127+00:00",
+          "start_time": "2023-12-14T00:47:45.410074+00:00"
         },
         "datalink": {
           "ea9a6d4e-4585-468b-b8ac-8d9a5e49d4ad": {
@@ -613,6 +660,50 @@
             "sampling_time": "2023-12-13T22:42:00.957531",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_0c31242183e448b3b9653c0229bf660e"
+          },
+          "0224f700-a4a4-4313-b1fc-88710d912868": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 13,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 560,
+              "truncated_num_cols": 13,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 560,
+              "truncated_string_columns": []
+            },
+            "display_id": "0224f700-a4a4-4313-b1fc-88710d912868",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-12-14T00:48:23.679586",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_46bae8ecf5064b4c908197b636d891cd"
           }
         }
       },
@@ -626,11 +717,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "bb3da7eb-6725-44a8-abdf-79937403b806"
+          "output_collection_id": "73cfa06f-3480-4a3f-a737-3a211083275c"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T22:45:10.198163+00:00",
-          "start_time": "2023-12-13T22:45:07.569399+00:00"
+          "end_time": "2023-12-14T00:48:26.485673+00:00",
+          "start_time": "2023-12-14T00:48:23.848058+00:00"
         }
       },
       "execution_count": null,
@@ -643,11 +734,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "0f16ddf2-fe77-4938-8b5d-40a670cd6917"
+          "output_collection_id": "37d527c6-6988-4a3c-bf09-0522a9dd10c9"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T22:45:16.911624+00:00",
-          "start_time": "2023-12-13T22:45:16.329748+00:00"
+          "end_time": "2023-12-14T00:48:27.057615+00:00",
+          "start_time": "2023-12-14T00:48:26.492723+00:00"
         }
       },
       "execution_count": null,
