Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -340,10 +340,32 @@
             "user_variable_name": "df_videos",
             "variable_name": "df_videos"
           }
+        },
+        "dx": {
+          "fieldMetadata": {},
+          "simpleTable": false,
+          "updated": 1702515102430,
+          "views": []
         }
       },
       "execution_count": null,
       "source": "import pandas as pd\n\n# Convert video details to DataFrame\ndef videos_to_df(video_details):\n    videos = []\n    for video in video_details:\n        video_info = {\n            'title': video['snippet']['title'],\n            'publishedAt': video['snippet']['publishedAt'],\n            'views': int(video['statistics'].get('viewCount', 0)),\n            'likes': int(video['statistics'].get('likeCount', 0)),\n            'dislikes': int(video['statistics'].get('dislikeCount', 0)),\n            'comments': int(video['statistics'].get('commentCount', 0))\n        }\n        videos.append(video_info)\n    return pd.DataFrame(videos)\n\n# Create DataFrame\ndf_videos = videos_to_df(video_details)\ndf_videos",
+      "outputs": []
+    },
+    {
+      "id": "b5c52b0d-2f5d-4c97-8809-6614a4309478",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "# automatically populated; add a variable name below\n_ = df_videos",
       "outputs": []
     },
     {
