--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -39,8 +39,8 @@
         "from googleapiclient.discovery import build\n",
         "\n",
         "# Set up the YouTube API client\n",
-        "# Removed my API key, will have to create your own\n",
-        "api_key = '<insert your API key here>'\n",
+        "# Removed my API key, will have to create and use your own\n",
+        "api_key = '**insert your API key here**'\n",
         "youtube = build('youtube', 'v3', developerKey=api_key)\n",
         "\n",
         "# Define the channel ID\n",
